--- a/index.html
+++ b/index.html
@@ -10,25 +10,20 @@
 <style>
   :root{
     --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --accent:#2f2f2f;
-    --rule:#d1d5db;
   }
   *{ box-sizing:border-box }
-  html,body{ height:100% }
+  html,body{ height:auto; min-height:100%; }
   body{
     margin:0; background:var(--bg); color:var(--ink);
     font:14px/1.45 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     -webkit-print-color-adjust:exact; print-color-adjust:exact;
   }
-  /* A4 sizing to avoid 2 pages */
+
   .sheet{
-    width: 178mm;               /* inner width that fits A4 with margins */
-    max-width: 95vw;
-    margin: 14mm auto;          /* visually similar to print margins */
-    background:var(--paper);
-    border:1px solid var(--line);
-    border-radius:12px;
+    width:900px; max-width:95vw; margin:22px auto;
+    background:var(--paper); border:1px solid var(--line); border-radius:12px;
     box-shadow:0 10px 30px rgba(0,0,0,.05);
-    padding:22px 26px 18px;
+    padding:28px 32px 26px;
   }
 
   /* Header */
@@ -40,37 +35,29 @@
   .t2{ font-size:12px; color:var(--muted); margin-top:2px }
   .inv-title{ font-size:32px; letter-spacing:.04em; font-weight:900; color:var(--accent) }
 
-  /* Thin accent rule (same everywhere) */
-  .rule{ height:3px; border-radius:3px; background:
-      linear-gradient(90deg, var(--accent) 0 160px, var(--rule) 160px 100%); }
-  .rule.sm{ height:3px; } /* same thickness, semantic class for reuse */
+  .divider{ height:3px; background:linear-gradient(90deg, var(--accent) 0 15%, #c7c9cc 15% 100%); border-radius:3px; margin:12px 0 4px }
+  .site{ text-align:right; color:#4b5563; font-size:12px; margin-bottom:12px }
 
-  /* Meta */
-  .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:16px }
+  /* Top meta */
+  .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:8px }
   .box{ border:1px solid var(--line); border-radius:10px; padding:14px 16px; background:#fff }
   .box h4{ margin:0 0 8px; font-size:13px; text-transform:uppercase; letter-spacing:.06em; color:#4b5563 }
   .mtitle{ font-weight:800; font-size:18px; margin:0 0 6px }
   .kv{ display:grid; grid-template-columns:140px 1fr; gap:6px 12px; font-size:13px }
   .label{ color:var(--muted) }
 
-  /* right meta is borderless; no website shown on the right */
   .meta-plain{ border:none; background:transparent; padding:0; text-align:right; }
   .meta-plain .kv{ grid-template-columns:1fr 140px; margin-top:4px }
-  .desc{ margin-top:8px; font-size:13px; color:#374151 }
+  .desc{ margin-top:8px; font-size:13px; color:#374151; text-align:right }
 
-  /* Section title + thin rule below it */
-  h3.section{ margin:18px 0 6px; font-size:16px; font-weight:800; letter-spacing:.02em; text-align:center }
-
-  /* Items table */
+  /* Items */
+  h3.section{ margin:18px 0 10px; font-size:16px; font-weight:800; letter-spacing:.02em; text-align:center }
   table{ width:100%; border-collapse:collapse; }
   thead th{
     text-transform:uppercase; letter-spacing:.05em; font-size:11px; color:#4b5563;
-    padding:10px 10px; background:#f3f4f6; text-align:center; border-bottom:none;
+    border-bottom:2px solid var(--accent); padding:8px 10px; background:#f3f4f6; text-align:center;
   }
-  /* thin rule under header row (instead of thick border) */
-  .thead-rule{ height:3px; background:
-      linear-gradient(90deg, var(--accent) 0 160px, var(--rule) 160px 100%); }
-  tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center }
+  tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center; vertical-align:middle }
   tbody td.desc-cell{ text-align:left }
   tbody tr:nth-child(2n){ background:#fafafa }
   td.num{ white-space:nowrap }
@@ -85,19 +72,31 @@
   .sum .row .label{ color:#6b7280 }
   .grand{ margin-top:8px; background:#111827; color:#fff; padding:12px 14px; border-radius:10px; font-weight:900; display:flex; justify-content:space-between }
 
+  /* Thanks & signature */
   .thanks{ margin-top:16px; font-weight:700 }
-  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:12px; padding-top:12px; border-top:1px solid #e5e7eb; color:#374151 }
+  .terms{ margin-top:6px; font-size:13px; color:#4b5563 }
+  .sigwrap{ display:flex; justify-content:flex-end; gap:28px; align-items:flex-end; margin-top:24px }
+  .sigline{ width:240px; border-bottom:1px solid #d1d5db; height:50px }
+  .sigmeta{ text-align:right; font-size:12px; color:#4b5563 }
+
+  /* Footer */
+  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px; border-top:1px solid #e5e7eb; color:#374151 }
   .footer div{ display:flex; align-items:center; gap:10px; }
-  .icon{ width:28px; height:28px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
-  .icon svg{ width:16px; height:16px; stroke:#6b7280; fill:none; stroke-width:2; }
+  .icon{ width:24px; height:24px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
+  .icon svg{ width:14px; height:14px; stroke:#6b7280; fill:none; stroke-width:2; }
+  .footer small{ font-size:12px }
 
   /* Print */
-  @page { size:A4; margin:10mm }
-  thead { display: table-header-group; }
-  tfoot { display: table-footer-group; }
+  @page { size: A4; margin: 10mm; }
+  thead{ display:table-header-group }
+  tfoot{ display:table-footer-group }
   @media print{
     body{ background:#fff }
-    .sheet{ box-shadow:none; border:none; margin:0 auto; width:178mm; padding:10mm 5mm 6mm; }
+    .sheet{ width: 190mm; margin:0 auto; box-shadow:none; border:none; padding:0 0 6mm 0; }
+    .divider{ background:#000 }
+    .footer small{ font-size:11px }
+    /* Avoid stray last blank page */
+    .sheet{ page-break-after:auto; }
   }
 </style>
 </head>
@@ -108,14 +107,13 @@
         <div class="logo" id="from_logo_box"></div>
         <div>
           <div class="t1" id="brand_name">Company</div>
-          <div class="t2" id="brand_site"></div>
+          <div class="t2" id="brand_sub"></div>
         </div>
       </div>
       <div class="right"><div class="inv-title" id="inv_title">INVOICE</div></div>
     </header>
-
-    <!-- THIN top rule -->
-    <div class="rule"></div>
+    <div class="divider"></div>
+    <div class="site" id="brand_site"></div>
 
     <section class="meta">
       <!-- CLIENT -->
@@ -133,43 +131,39 @@
         </div>
       </div>
 
-      <!-- INVOICE META (borderless; NO website on the right) -->
+      <!-- INVOICE META (borderless) -->
       <div class="box meta-plain">
         <div class="kv">
           <div class="label">Invoice no :</div><div id="invoice_number"></div>
           <div class="label">Date :</div><div id="invoice_date"></div>
         </div>
-        <h4 style="margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700">Invoice Description</h4>
+        <h4 style="margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700; text-align:right">Invoice Description</h4>
         <div class="desc" id="invoice_description"></div>
       </div>
     </section>
 
     <h3 class="section">Items</h3>
-    <!-- thin rule under the Items header (same as top) -->
-    <div class="rule sm" style="margin-bottom:6px;"></div>
-
     <table>
       <thead>
         <tr>
-          <th style="width:140px">Date of Work</th>
+          <th style="width:130px">Date of Work</th>
           <th>Description</th>
-          <th style="width:130px">Price / Hourly Rate</th>
+          <th style="width:120px">Price / Hourly Rate</th>
           <th style="width:80px">Cost Qty</th>
           <th style="width:140px">Cost Total</th>
         </tr>
       </thead>
-      <!-- rule that visually underlines the header row (thin) -->
       <tbody id="items_body"></tbody>
     </table>
 
     <section class="totals">
       <div class="pay">
         <h5>Payment Method :</h5>
-        <p><strong>Company ABN</strong> : <span id="from_business_no"></span></p>
+        <p><strong>Company ABN</strong> : <span id="company_abn"></span></p>
         <p><strong>Bank Name</strong> : <span id="bank_name"></span></p>
         <p><strong>Account Name</strong> : <span id="bank_acc_name"></span></p>
         <p><strong>Account Number</strong> : <span id="bank_acc_no"></span></p>
-        <p><strong>Account BSB</strong> : <span id="bank_routing"></span></p>
+        <p><strong>Account BSB</strong> : <span id="bank_bsb"></span></p>
       </div>
       <div class="sum">
         <div class="row"><div class="label">Total Hours :</div><div id="total_hours">0</div></div>
@@ -180,28 +174,36 @@
     </section>
 
     <div class="thanks">Thank you for your business!</div>
+    <div class="terms" id="terms"></div>
+
+    <div class="sigwrap" id="sign_block">
+      <div class="sigline"></div>
+      <div class="sigmeta">
+        <div style="font-weight:700; margin-top:8px" id="signer"></div>
+      </div>
+    </div>
 
     <footer class="footer">
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M2 3h4l2 5-3 2a16 16 0 0 0 7 7l2-3 5 2v4a2 2 0 0 1-2 2c-9.94 0-18-8.06-18-18a2 2 0 0 1 2-2z"/></svg>
-        </span> <span id="from_phone_footer"></span>
+        </span> <small id="from_phone_footer"></small>
       </div>
       <div>
         <span class="icon">
-          <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/><path d="M2 18h20"/></svg>
-        </span> <span id="from_email_footer"></span>
+          <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/></svg>
+        </span> <small id="from_email_footer"></small>
       </div>
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M12 21s7-4.35 7-10a7 7 0 0 0-14 0c0 5.65 7 10 7 10z"/><circle cx="12" cy="11" r="3"/></svg>
-        </span> <span id="from_address_footer"></span>
+        </span> <small id="from_address_footer"></small>
       </div>
     </footer>
   </div>
 
 <script>
-  // --- helpers
+  // ---- helpers
   const qp = new URLSearchParams(location.search);
   const get = (k, d='') => qp.get(k) ?? d;
   const ccy = get('ccy','AUD');
@@ -214,22 +216,27 @@
   const money = n => Number(n||0).toLocaleString(undefined,{style:'currency',currency:ccy});
   const esc = s => String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
 
-  const setText = (id, value) => {
+  function setText(id, value){
     const el = document.getElementById(id);
     if(!el) return;
     if(value && String(value).trim()!==''){ el.textContent = value; el.style.display=''; }
     else { el.textContent = ''; el.style.display='none'; }
-  };
+  }
 
-  // Brand + logo
+  // Header brand
   const brand = get('from_name','');
   setText('brand_name', brand || 'Invoice');
+  setText('brand_sub', get('from_web',''));
   setText('brand_site', get('from_web',''));
+
+  // Logo
   const logo = get('from_logo','').trim();
-  if (logo) document.getElementById('from_logo_box').innerHTML = `<img src="${logo}" alt="logo">`;
+  if (logo) {
+    document.getElementById('from_logo_box').innerHTML = `<img src="${logo}" alt="logo">`;
+  }
 
   // Title + invoice number
-  document.getElementById('inv_title').textContent = 'INVOICE';
+  setText('inv_title', 'INVOICE');
   setText('invoice_number', get('invoice_number',''));
 
   // Date formatting
@@ -252,34 +259,41 @@
   setText('client_website', get('client_website',''));
   setText('client_business_number', get('client_business_number',''));
   setText('client_address', get('client_address',''));
+
+  // Description
   setText('invoice_description', get('invoice_description',''));
 
-  // Company/Bank
-  setText('from_business_no', get('from_business_no',''));
+  // Payment / bank
+  // company_abn = from_business_no (ABN)
+  setText('company_abn', get('from_business_no',''));
   setText('bank_name', get('bank_name',''));
   setText('bank_acc_name', get('bank_acc_name',''));
   setText('bank_acc_no', get('bank_acc_no',''));
-  setText('bank_routing', get('bank_routing',''));
+  const bsb = get('bank_bsb','') || get('bank_routing','');
+  setText('bank_bsb', bsb);
 
-  // Footer contact
+  // Footer contact from company
   setText('from_phone_footer', get('from_phone',''));
   setText('from_email_footer', get('from_email',''));
   setText('from_address_footer', get('from_address',''));
 
-  // Items parser — "date::desc::price::qty::total" joined by "||"
+  // Items parser — rows: (date?)::title::price::qty::total
   function parseItems(str){
     if(!str) return [];
     const rowSep = /(\|\||%7C%7C)/i;
     const colSep = /(::|%3A%3A)/i;
     return str.split(rowSep).filter(s => !rowSep.test(s) && s!=='')
       .map(row => {
-        const fields = row.split(colSep).filter(s => !colSep.test(s));
-        const [date='', desc='', price='', qty='', total=''] = fields;
+        const parts = row.split(colSep).filter(s => !colSep.test(s));
+        // support 4 or 5 fields
+        let date='', title='', price='', qty='', total='';
+        if(parts.length === 5){ [date,title,price,qty,total] = parts; }
+        else { [title,price,qty,total] = parts; }
         return {
-          date: decodeURIComponent(date||''),
-          desc: decodeURIComponent(desc||''),
+          date: decodeURIComponent(date || ''),
+          title: decodeURIComponent(title || ''),
           price: clean(price),
-          qty: parseFloat(qty||0) || 0,
+          qty: parseFloat(qty || 0) || 0,
           total: clean(total)
         };
       });
@@ -294,14 +308,16 @@
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${esc(it.date)}</td>
-      <td class="desc-cell">${esc(it.desc)}</td>
+      <td class="desc-cell">${esc(it.title)}</td>
       <td class="num">${money(it.price)}</td>
       <td>${(it.qty ?? 0).toLocaleString()}</td>
       <td class="num">${money(it.total)}</td>`;
     tbody.appendChild(tr);
   });
 
-  // Totals / hours
+  // Totals + hours
+  setText('total_hours', get('total_hours',''));
+
   let subtotal = clean(get('subtotal',''));
   if (!subtotal && subtotalFromItems) subtotal = subtotalFromItems;
 
@@ -315,16 +331,23 @@
   let grand = clean(get('grand_total',''));
   if (!grand) grand = subtotal + taxes;
 
-  const hours = get('total_hours','');
-  setText('total_hours', hours ? hours : '');
-
-  document.getElementById('subtotal').textContent = money(subtotal);
-  document.getElementById('taxes').textContent = money(taxes);
+  setText('subtotal', money(subtotal));
+  setText('taxes', money(taxes));
   document.getElementById('tax_rate_label').textContent =
     (taxRate || taxRate===0) ? `(${(taxRate*100).toFixed(0)}%)` : '';
-  document.getElementById('grand_total').textContent = money(grand);
+  setText('grand_total', money(grand));
 
-  // Auto-print (browser controls the default destination)
+  // Signature
+  const signerText = [get('signer_name','').trim(), get('signer_role','').trim()].filter(Boolean).join(' · ');
+  if (signerText) document.getElementById('signer').textContent = signerText;
+  else document.getElementById('sign_block').style.display = 'none';
+
+  // Terms (optional)
+  const terms = get('terms','').trim();
+  if(terms) document.getElementById('terms').textContent = terms;
+  else document.getElementById('terms').style.display = 'none';
+
+  // Auto-print (prints; user’s dialog controls destination)
   const autoPrint = /^(1|true)$/i.test(get('print','').trim());
   if (autoPrint) {
     window.addEventListener('load', () => { try { setTimeout(() => window.print(), 0); } catch {} });
